inserindo a função timer no js e testando alumas situações

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
    
 </head>
 <body>
- 
-    <header><h1 class="game-tittle">PARROT CARD GAME</h1></header>
-
+    <h1 class="game-tittle">PARROT CARD GAME</h1>
     <script src='javascript/javascript.js'></script>
-    <script src='javascript/cron.js'></script>
 </body>
 </html>
