adicionando o cronometro, falta resolver um bug de quando tem mais de uma carta virada pra cima

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <h1 class="game-tittle">PARROT CARD GAME</h1>
+    <div class="timer" id="timer" data-test="timer"></div>
     <script src='javascript/javascript.js'></script>
 </body>
 </html>
